--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,9 +23,9 @@
   --color-neutral-700: #414651;
   --color-neutral-800: #252b37;
   --color-neutral-900: #1b1d27;
-  --color-neutral-950: #0a0c12;
+  --color-neutral-950: #0a0d12;
 
-  --color-primary-100: #c11116;
+  --color-primary-100: #c12116;
   --color-primary: var(--color-primary-100);
 
   --color-accent-red: #d0205e;
